fixing scrollbar issues

--- a/src/index.css
+++ b/src/index.css
@@ -92,4 +92,7 @@ textarea{
     background-repeat: no-repeat  !important;
     background-size: cover !important;
 }
+::-webkit-scrollbar{
+  display: none;
+}
 
